# water-mqtt

./: .flake8  .gitignore  README.md  pyproject.toml
kicad/: raspi_water_counter-B_Cu.gbr  raspi_water_counter-B_Mask.gbr  raspi_water_counter-B_Silkscreen.gbr  raspi_water_counter-Edge_Cuts.gbr  raspi_water_counter-F_Cu.gbr  raspi_water_counter-F_Mask.gbr  raspi_water_counter-F_Silkscreen.gbr  raspi_water_counter-job.gbrjob  raspi_water_counter.drl  raspi_water_counter.kicad_pcb  raspi_water_counter.kicad_pro  raspi_water_counter.kicad_sch  raspi_water_counter.pro  raspi_water_counter.sch  sym-lib-table
water_mqtt/: cli.py  gpio.py  http.py  mqtt.py
