[tool.poetry]
name = "water-mqtt"
version = "0.1.1"
description = "A gateway from an impulse water meter counter to MQTT"
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7.2"
paho-mqtt = "^1.5.1"
typing_extensions = "^3.7.4"
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^5"
pylint = "^2.15.8"

[tool.poetry.scripts]
water-mqtt = "water_mqtt.cli:water_mqtt"
flasktest = "water_mqtt.cli:flasktest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
