[tool.poetry]
name = "water-mqtt"
version = "0.1.1"
description = "A gateway from an impulse water meter counter to MQTT"
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7.2"
paho-mqtt = "^1.5.1"
typing_extensions = "^3.7.4"
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^5"
pylint = "^2.15.8"

[tool.poetry.scripts]
water-mqtt = "water_mqtt.cli:water_mqtt"
flasktest = "water_mqtt.cli:flasktest"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pylint]
    [tool.pylint.format]
    # Consistency with black
    max-line-length = 88

    [tool.pylint.'MESSAGES CONTROL']
    disable = [
        'broad-except',
        # Handled by black
        'format',
        # Import order is handled by isort
        'wrong-import-order',
        'fixme',
        'too-many-locals',
        'too-many-branches',
        'too-many-nested-blocks',
        'too-many-arguments',
        'too-many-instance-attributes',
        'too-many-statements',
        'too-many-return-statements',
        'too-few-public-methods',
        # R0801 is the "duplicate code" warning
        'R0801',
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
