[tool.poetry]
name = "water-mqtt"
version = "0.1.1"
description = "A gateway from an impulse water meter counter to MQTT"
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8.1"
paho-mqtt = "^1.5.1"
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.scripts]
water-mqtt = "water_mqtt.cli:water_mqtt"
flasktest = "water_mqtt.cli:flasktest"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pylint = "^3.0.3"
python-lsp-server = "^1.10.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pylint]
    [tool.pylint.format]
    # Consistency with black
    max-line-length = 88

    [tool.pylint.'MESSAGES CONTROL']
    disable = [
        'broad-except',
        # Handled by black
        'format',
        # Import order is handled by isort
        'wrong-import-order',
        'fixme',
        'too-many-locals',
        'too-many-branches',
        'too-many-nested-blocks',
        'too-many-arguments',
        'too-many-instance-attributes',
        'too-many-statements',
        'too-many-return-statements',
        'too-few-public-methods',
        # R0801 is the "duplicate code" warning
        'R0801',
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
